Bump up the z-index by another factor of 10,  to stop it appearing behind the Wordpress admin bar. Bump version to 1.3 and release to website.

--- a/styles.css
+++ b/styles.css
@@ -35,13 +35,13 @@
 	font-size: inherit !important;
 	font-family: sans-serif !important;
 	color: black !important;
-	vertical-align: baseline !important;
+	vertical-align: middle !important;
 
 	position: fixed !important;
 	left: 0px !important;
 	top: 0px !important;
 
-	z-index: 99999 !important;
+	z-index: 999999 !important;
 
 	-webkit-transition: opacity .25s ease-in-out;
 	opacity: 0; /* Set this to '1' at runtime to make the div fade in */
